# TE-RAG-NEW

./: .env  .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: it-IT.json
app/: ingest.py  main.py
app/chat_engine/: load_chat_engine.py
app/chat_engine/GeneralInteractionQE/: CustomQE.py  GeneralInteractionQETool.py  README.md
app/chat_engine/LoadIndex/: README.md  chroma_utils.py  load_vector_indices.py
app/chat_engine/LogHandler/: LogHandler.py  README.md  shell.py
app/chat_engine/SemanticSearchQE/: HybridRetriever.py  README.md  SemanticSearchQETool.py
app/common/: base_logger.py
app/common/prompts_templates/: PromptTemplates.py
app/models/: README.md  gcp_client.py  models.py
app/utils/: user_output.py
public/: main.js
