[tool.poetry]
name = "dwh-chatbot"
version = "0.1.0"
description = ""
authors = ["GiovanniGatti <gi.gatti@reply.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
llama-index-embeddings-vertex = "^0.2.1"
llama-index = "^0.11.22"
chromadb = "^0.5.18"
llama-index-vector-stores-chroma = "^0.3.0"
llama-index-core = "^0.11.22"
llama-index-llms-vertex = "^0.3.7"
chainlit = "^1.3.2"
llama-index-retrievers-bm25 = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
